updated membership api